--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,5 +23,5 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.pytest.ini_options]
-DJANGO_SETTINGS_MODULE="bridge_server.settings"
+DJANGO_SETTINGS_MODULE="project.settings"
 python_files = ["tests.py", "test_*.py", "*_test.py", "testing/python/*.py"]
