--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ bridge =  { git = "git@gitlab.com:offby1/bridge.git" }
 django = "^5.0.1"
 pytest-django = "^4.7.0"
 tqdm = "^4.66.4"
+more-itertools = "^10.3.0"
 
 [tool.poetry.group.dev.dependencies]
 django-extensions = "^3.2.3"
