--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,13 +9,12 @@ package-mode = false
 [tool.poetry.dependencies]
 python = ">=3.10"
 
-# This is a private repo, for no particularly good reason.
-bridge =  { git = "git@gitlab.com:offby1/bridge.git" }
 django = "^5.0.1"
 faker = "^26.0.0"
 more-itertools = "^10.3.0"
 pytest-django = "^4.7.0"
 tqdm = "^4.66.4"
+bridge = {path = "../library"}
 
 [tool.poetry.group.dev.dependencies]
 django-extensions = "^3.2.3"
