--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ bridge = {path = "../library"}
 [tool.poetry.group.dev.dependencies]
 django-extensions = "^3.2.3"
 django-debug-toolbar = "^4.4.6"
+ipython = "^8.26.0"
 
 [build-system]
 requires = ["poetry-core"]
