--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ more-itertools = "^10.3.0"
 pytest-django = "^4.7.0"
 tqdm = "^4.66.4"
 bridge = {path = "../library"}
+django-eventstream = {extras = ["drf"], version = "^5.3.0"}
+daphne = "^4.1.2"
 
 [tool.poetry.group.dev.dependencies]
 django-extensions = "^3.2.3"
