--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ tqdm = "^4.66.4"
 bridge = {path = "../library"}
 django-eventstream = {extras = ["drf"], version = "^5.3.0"}
 daphne = "^4.1.2"
+django-template-partials = "^24.4"
 
 [tool.poetry.group.dev.dependencies]
 django-extensions = "^3.2.3"
