--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 package-mode = false
 
 [tool.poetry.dependencies]
-python = ">=3.10"
+python = ">=3.10,<4.0"
 
 django = "^5.0.1"
 faker = "^26.0.0"
@@ -25,6 +25,9 @@ django-extensions = "^3.2.3"
 django-debug-toolbar = "^4.4.6"
 ipython = "^8.26.0"
 django-coverage-plugin = "^3.1.0"
+django-types = "^0.19.1"
+mypy = "^1.11.2"
+types-tqdm = "^4.66.0.20240417"
 
 [tool.coverage.run]
 dynamic_context = "test_function"
