--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ django-coverage-plugin = "^3.1.0"
 django-types = "^0.19.1"
 mypy = "^1.11.2"
 types-tqdm = "^4.66.0.20240417"
+python-lsp-server = {extras = ["all"], version = "^1.12.0"}
 
 [tool.coverage.run]
 dynamic_context = "test_function"
