--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ django-eventstream = {extras = ["drf"], version = "^5.3.0"}
 daphne = "^4.1.2"
 django-template-partials = "^24.4"
 whitenoise = "^6.7.0"
+redis = "^5.0.8"
 
 [tool.poetry.group.dev.dependencies]
 django-extensions = "^3.2.3"
