--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ retrying = "^1.3.4"
 sseclient = "^0.0.27"
 twisted = {extras = ["http2", "tls"], version = "^24.7.0"}
 types-requests = "^2.32.0.20240712"
+platformdirs = "^4.2.2"
 
 [tool.poetry.group.dev.dependencies]
 django-extensions = "^3.2.3"
