--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,5 +53,5 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.pytest.ini_options]
-DJANGO_SETTINGS_MODULE="project.settings"
+DJANGO_SETTINGS_MODULE="project.dev_settings"
 python_files = ["tests.py", "test_*.py", "*_test.py", "testing/python/*.py"]
