--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,3 +10,15 @@ repos:
         exclude_types: [css, json, javascript]
     -   id: check-yaml
     -   id: check-added-large-files
+
+- repo: https://github.com/astral-sh/ruff-pre-commit
+  # Ruff version.
+  rev: v0.6.4
+  hooks:
+    # Run the linter.
+    - id: ruff
+      exclude: '/migrations/'
+      args: [ --fix ]
+    # Run the formatter.
+    - id: ruff-format
+      exclude: '/migrations/'
