--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,8 +14,8 @@ faker = "^26.0.0"
 more-itertools = "^10.3.0"
 pytest-django = "^4.7.0"
 tqdm = "^4.66.4"
-bridge = { git = "https://gitlab.com/offby1/bridge.git", rev = "78636ca2cb17304d72324020cd4d8dfbd70a681d" }
-#bridge = {path = "../library", develop = true}
+#bridge = { git = "https://gitlab.com/offby1/bridge.git", rev = "78636ca2cb17304d72324020cd4d8dfbd70a681d" }
+bridge = {path = "../library", develop = true}
 django-eventstream = {extras = ["drf"], version = "^5.3.0"}
 daphne = "^4.1.2"
 django-template-partials = "^24.4"
