New "bot" service
Seems to run fine, although it's slower (with 14 tables) than I'd have expected.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,6 +23,15 @@ services:
     secrets:
       - django_secret
 
+  bot:
+    <<: *django
+    command: "poetry run python manage.py bot"
+    ports: []
+    depends_on:
+      - django
+    environment:
+      DJANGO_HOST: django
+
   django-migrated:
     <<: *django
     command: "poetry run python manage.py migrate --noinput"
