--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -48,6 +48,8 @@ services:
       POSTGRES_PASSWORD: postgres
     # TODO -- figure out how to tell docker to put the backing store where I want it, or at the very least, figure out
     # where it is
+    ports:
+      - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
