--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ types-requests = "^2.32.0.20240712"
 platformdirs = "^4.2.2"
 psycopg = "^3.2.1"
 sentry-sdk = "^2.14.0"
+docutils = "^0.21.2"
 
 [tool.poetry.group.dev.dependencies]
 django-extensions = "^3.2.3"
