--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,17 +1,17 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
 repos:
-# - repo: https://github.com/astral-sh/ruff-pre-commit
-#   # Ruff version.
-#   rev: v0.6.4
-#   hooks:
-#     # Run the linter.
-#     - id: ruff
-#       exclude: '/migrations/'
-#       args: [ --unsafe-fixes ]
-#     # Run the formatter.
-#     - id: ruff-format
-#       exclude: '/migrations/'
+- repo: https://github.com/astral-sh/ruff-pre-commit
+  # Ruff version.
+  rev: v0.6.4
+  hooks:
+    # Run the linter.
+    - id: ruff
+      exclude: '/migrations/'
+      args: [ --unsafe-fixes ]
+    # Run the formatter.
+    - id: ruff-format
+      exclude: '/migrations/'
 
 - repo: https://github.com/djlint/djLint
   rev: v1.35.2
