VSC: run the debug version

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "debugpy",
             "request": "launch",
             "args": [
-                "runserver", "9000"
+                "runserver", "9000", "--settings", "project.dev_settings"
             ],
             "django": true,
             "autoStartBrowser": false,
