--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,9 +25,9 @@ retrying = "^1.3.4"
 sseclient = "^0.0.27"
 types-requests = "^2.32.0.20240712"
 platformdirs = "^4.2.2"
-psycopg = "^3.2.1"
 sentry-sdk = "^2.14.0"
 docutils = "^0.21.2"
+psycopg2-binary = "^2.9.9"
 
 [tool.poetry.group.dev.dependencies]
 django-extensions = "^3.2.3"
