--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,6 +23,11 @@ services:
     secrets:
       - django_secret
 
+    # mount the work tree into the image, so we can edit normally, and those edits are immediately visible in the container
+    # Note that daphne won't automatically restart though
+    # volumes:
+    #   - ./project:/bridge/project
+
   bot:
     <<: *django
     command: "poetry run python manage.py bot"
