--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,6 +16,7 @@
             ],
             "django": true,
             "autoStartBrowser": false,
+            "justMyCode": false,
             "program": "${workspaceFolder}/project/manage.py"
         },
         {
@@ -30,7 +31,16 @@
             ],
             "django": true,
             "autoStartBrowser": false,
+            "justMyCode": false,
             "program": "${workspaceFolder}/project/manage.py"
+        },
+        {
+            "name": "Python: Debug Tests",
+            "type": "python",
+            "request": "launch",
+            "purpose": ["debug-test"],
+            "console": "integratedTerminal",
+            "justMyCode": false
         }
     ]
 }
