--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ mypy = "^1.11.2"
 types-tqdm = "^4.66.0.20240417"
 python-lsp-server = "^1.12.0"
 logging-tree = "^1.10"
+ruff = "^0.6.8"
 
 [tool.pydocstyle]
 # Disable pydocstyle entirely.
