Set the sentry environment to "staging" on the laptop

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,6 +16,7 @@ services:
         condition: service_started
     environment:
       DJANGO_SECRET_FILE: /run/secrets/django_secret
+      HOST_HOSTNAME: $HOSTNAME
       PGHOST: postgres
       PGPASS: postgres
     ports:
