Greatly complexify, but also speed up, the bot

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,8 +24,8 @@ services:
 
     # mount the work tree into the image, so we can edit normally, and those edits are immediately visible in the container
     # Note that daphne won't automatically restart though
-    # volumes:
-    #   - ./project:/bridge/project
+    volumes:
+      - ./project:/bridge/project
 
   bot:
     <<: *django
@@ -47,7 +47,7 @@ services:
 
   populated-with-fake-data:
     <<: *django
-    command: "poetry run python manage.py generate_fake_data --players=8"
+    command: "poetry run python manage.py generate_fake_data --players=56"
     restart: "no"
     ports: []
     depends_on:
