--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,8 +24,8 @@ services:
 
     # mount the work tree into the image, so we can edit normally, and those edits are immediately visible in the container
     # Note that daphne won't automatically restart though
-    volumes:
-      - ./project:/bridge/project
+    # volumes:
+    #   - ./project:/bridge/project
 
   bot:
     <<: *django
