populated-with-fake-data: depend on "django", not "django-migrated" ...
... I don't know why, but I just saw it complain about a relation not existing, even though django-migrated had just
created it 🤷

So, waiting for django might delay its startup a bit more, so that the gremlins can leave the building

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -51,7 +51,7 @@ services:
     restart: "no"
     ports: []
     depends_on:
-      - django-migrated
+      - django
       - redis
 
   postgres:
