--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,8 +18,8 @@ faker = "^26.0.0"
 more-itertools = "^10.3.0"
 pytest-django = "^4.7.0"
 tqdm = "^4.66.4"
-bridge = { git = "https://gitlab.com/offby1/bridge.git", rev = "2b0e778bf3cfb32a3e31ffbba48033b7cd1ecadd" }
-#bridge = {path = "../library", develop = true}
+#bridge = { git = "https://gitlab.com/offby1/bridge.git", rev = "2b0e778bf3cfb32a3e31ffbba48033b7cd1ecadd" }
+bridge = {path = "../library", develop = true}
 django-eventstream = {extras = ["drf"], version = "^5.3.0"}
 daphne = "^4.1.2"
 django-template-partials = "^24.4"
