--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ bridge = { git = "https://gitlab.com/offby1/bridge.git", rev = "2b0e778bf3cfb32a
 django-eventstream = {extras = ["drf"], version = "^5.3.0"}
 daphne = "^4.1.2"
 django-template-partials = "^24.4"
-whitenoise = "^6.7.0"
+whitenoise = {extras = ["brotli"], version = "^6.7.0"}
 redis = "^5.0.8"
 retrying = "^1.3.4"
 sseclient = "^0.0.27"
