--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -36,6 +36,7 @@ services:
         condition: service_completed_successfully
     environment:
       DJANGO_HOST: django
+      DJANGO_SECRET_FILE: /run/secrets/django_secret
 
   django-migrated:
     <<: *django
