--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ types-tqdm = "^4.66.0.20240417"
 python-lsp-server = "^1.12.0"
 logging-tree = "^1.10"
 ruff = "^0.6.9"
+ipdb = "^0.13.13"
 
 [tool.pydocstyle]
 # Disable pydocstyle entirely.
