--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ python-lsp-server = "^1.12.0"
 logging-tree = "^1.10"
 ruff = "^0.6.9"
 ipdb = "^0.13.13"
+pytest-profiling = "^1.7.0"
 
 [tool.pydocstyle]
 # Disable pydocstyle entirely.
