--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ sentry-sdk = "^2.14.0"
 docutils = "^0.21.2"
 psycopg2-binary = "^2.9.9"
 djangorestframework = "^3.15.2"
+django-fastdev = "^1.12.0"
 
 
 [tool.poetry.group.dev.dependencies]
