--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,9 +31,9 @@ types-requests = "^2.32.0.20240712"
 platformdirs = "^4.2.2"
 sentry-sdk = "^2.14.0"
 docutils = "^0.21.2"
-psycopg2-binary = "^2.9.9"
 djangorestframework = "^3.15.2"
 django-fastdev = "^1.12.0"
+psycopg = {extras = ["binary"], version = "^3.2.3"}
 
 
 [tool.poetry.group.dev.dependencies]
