--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,8 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile
+      labels:
+         info.offby1.bridge.git-version: ${GIT_VERSION:-}
 
     depends_on:
       django-migrated:
