Embiggen the build context ...
... so that we can refer to the api-bot directory, which is a sibling of the server directory.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,8 +5,8 @@ volumes:
 services:
   django: &django
     build:
-      context: .
-      dockerfile: ./Dockerfile
+      context: ..
+      dockerfile: ./server/Dockerfile
       labels:
          info.offby1.bridge.git-version: ${GIT_VERSION:-}
 
