Set `init: true` for most containers
This lets them shut down more quickly when I type Control+C at the laptop.

https://stackoverflow.com/a/62854251/20146

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,6 +26,7 @@ services:
       - "9000:9000"
     secrets:
       - django_secret
+    init: true                  # https://docs.docker.com/reference/compose-file/services/#init
     volumes:
       - django_static_root:/bridge/project/static_root
 
