--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ docutils = "^0.21.2"
 djangorestframework = "^3.15.2"
 django-fastdev = "^1.12.0"
 psycopg = {extras = ["binary"], version = "^3.2.3"}
+django-log-request-id = "^2.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
