Add stuff so that I can run py-spy ...
... from a terminal in the container.

I've been doing this by

* opening the Orbstack UI
* clicking the "django" container
* clicking the "terminal" thingy on the right
* in the resulting shell window, getting the PID of one of the bot processes with "pstree" (note to self: don't get the
PID of the "supervise" process)
* typing e.g. `poetry run py-spy top --pid 25`

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,10 @@ services:
       labels:
          info.offby1.bridge.git-version: ${GIT_VERSION:-}
 
+    # So I can run e.g. `py-spy top --pid 21` in a shell in the container
+    cap_add:                    # for [py-spy](https://github.com/benfred/py-spy?tab=readme-ov-file#how-do-i-run-py-spy-in-kubernetes)
+      - SYS_PTRACE
+
     depends_on:
       populated-with-fake-data:
         condition: service_completed_successfully
