--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,12 @@
-[tool.djlint]
-use_gitignore=true
-ignore="H016,H021,H023,H030,H031"
-
-[tool.poetry]
+[project]
 name = "bridge_server"
 version = "0.1.0"
 description = "An online bridge game"
-authors = ["Eric Hanchrow <eric.hanchrow@gmail.com>"]
 readme = "README.md"
-package-mode = false
+authors = [{name = "Eric Hanchrow", email= "eric.hanchrow@gmail.com"}]
+requires-python = ">=3.10,<4.0"
 
 [tool.poetry.dependencies]
-python = ">=3.10,<4.0"
-
 django = "^5.1"
 django-debug-toolbar = "^4.4.6"
 django-extensions = "^3.2.3"
@@ -36,6 +30,14 @@ django-fastdev = "^1.12.0"
 psycopg = {extras = ["binary"], version = "^3.2.3"}
 django-log-request-id = "^2.1.0"
 py-spy = "^0.4.0"
+
+[tool.djlint]
+use_gitignore=true
+ignore="H016,H021,H023,H030,H031"
+
+[tool.poetry]
+requires-poetry = ">=2.0"
+package-mode = false
 
 [tool.poetry.group.dev.dependencies]
 ipython = "^8.26.0"
