--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ more-itertools = "^10.3.0"
 tqdm = "^4.66.4"
 bridge = { git = "https://gitlab.com/offby1/bridge.git", rev = "cfddd18dad94f2c9ab44be7b46bb8ee2ab499c8d" }
 #bridge = {path = "../library", develop = true}
-django-eventstream = {extras = ["drf"], version = "^5.3.0"}
+django-eventstream = "^5.3.0"
 daphne = "^4.1.2"
 django-template-partials = "^24.4"
 whitenoise = {extras = ["brotli"], version = "^6.7.0"}
