--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -74,9 +74,9 @@ services:
     ports:
       - "5432:5432"
 
-    # Experience shows we need about 200 connections for 40 players.  Probably more if they all have browsers open :-(
+    # Experience shows we need this many connections for 40 players.  Probably more if they all have browsers open :-(
     # (It looks like we need one connection per SSE client per channel)
-    command: ["postgres", "-c", "max_connections=200"] # suggested by https://hub.docker.com/_/postgres
+    command: ["postgres", "--max_connections=1000", "--idle_session_timeout=120000"]
 
     volumes:
       - postgres_data:/var/lib/postgresql/data
