More-accurate way to tell if we're running in prod

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,6 +23,7 @@ services:
       django-collected-static:
         condition: service_completed_successfully
     environment:
+      COMPOSE_PROFILES: ${COMPOSE_PROFILES:-}
       DJANGO_SECRET_FILE: /run/secrets/django_secret
       DJANGO_SKELETON_KEY_FILE: /run/secrets/django_skeleton_key
       HOST_HOSTNAME: ${HOSTNAME:-unknown-host}
