--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,7 +14,9 @@ repos:
     # Run the linter.
     - id: ruff
       exclude: '/migrations/'
-      args: [ "--unsafe-fixes", "--fix" ]
+      args:
+        - "--unsafe-fixes"
+        - "--fix"
     # Run the formatter.
     - id: ruff-format
       exclude: '/migrations/'
