--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,8 +60,10 @@ python-lsp-black = "^2.0.0"
 pyls-memestra = "^0.0.16"
 pylsp-rope = "^0.1.17"
 python-lsp-ruff = "^2.2.2"
+python-constraint = "^1.4.0"
 pytest-xdist = "^3.6.1"
 freezegun = "^1.5.1"
+
 
 [tool.pydocstyle]
 # Disable pydocstyle entirely.
