--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ psycopg = {extras = ["binary"], version = "^3.2.3"}
 django-log-request-id = "^2.1.0"
 py-spy = "^0.4.0"
 types-tabulate = "^0.9.0.20241207"
+pyinstrument = "^5.0.1"
 
 [tool.djlint]
 use_gitignore=true
