--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,7 +63,7 @@ python-lsp-ruff = "^2.2.2"
 # Disable pydocstyle entirely.
 # This seems cleaner than uninstalling it.
 # We hates it, we does.
-ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D212", "D213"]
+ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "D212", "D213"]
 
 [tool.ruff]
 line-length = 100
