--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,6 +59,7 @@ pyls-memestra = "^0.0.16"
 pylsp-rope = "^0.1.17"
 python-lsp-ruff = "^2.2.2"
 pytest-xdist = "^3.6.1"
+freezegun = "^1.5.1"
 
 [tool.pydocstyle]
 # Disable pydocstyle entirely.
