--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,7 @@ python-lsp-black = "^2.0.0"
 pyls-memestra = "^0.0.16"
 pylsp-rope = "^0.1.17"
 python-lsp-ruff = "^2.2.2"
+pytest-xdist = "^3.6.1"
 
 [tool.pydocstyle]
 # Disable pydocstyle entirely.
