--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ django-log-request-id = "^2.1.0"
 py-spy = "^0.4.0"
 types-tabulate = "^0.9.0.20241207"
 pyinstrument = "^5.0.1"
+humanize = "^4.11.0"
 
 [tool.djlint]
 use_gitignore=true
