--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -71,6 +71,8 @@ services:
 
     # Experience shows we need at least one connection per player.  (It looks like we need one connection per SSE
     # client)
+
+    # "--log_statement=all", "--log_min_duration_statement=0" are handy for exploring performance
     command: ["postgres", "--max_connections=100"]
 
     volumes:
