--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,7 +8,7 @@ repos:
     # Run the linter.
     - id: ruff
       exclude: '/migrations/'
-      args: [ --unsafe-fixes ]
+      args: [ "--unsafe-fixes", "--fix" ]
     # Run the formatter.
     - id: ruff-format
       exclude: '/migrations/'
