Prometheus all the things

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ pyinstrument = "^5.0.1"
 humanize = "^4.11.0"
 django-tz-detect = "^0.5.0"
 django-tables2 = "2.*"
+django-prometheus = "*"
 
 [tool.djlint]
 use_gitignore=true
