--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,7 +48,7 @@ django-coverage-plugin = "^3.1.0"
 django-types = "^0.19.1"
 mypy = "^1.11.2"
 types-tqdm = "^4.66.0.20240417"
-python-lsp-server = {extras = ["autopep8", "flake8", "mccabe", "pyflakes", "pylint", "rope", "test", "websockets", "yapf"], version = "*"}
+python-lsp-server = {extras = ["autopep8", "flake8", "mccabe", "pyflakes", "pylint", "rope", "websockets", "yapf"], version = "*"}
 logging-tree = "^1.10"
 ruff = "*"
 ipdb = "^0.13.13"
