--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ py-spy = "^0.4.0"
 types-tabulate = "^0.9.0.20241207"
 pyinstrument = "^5.0.1"
 humanize = "^4.11.0"
+django-tz-detect = "^0.5.0"
 
 [tool.djlint]
 use_gitignore=true
