--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,6 +63,8 @@ python-lsp-ruff = "^2.2.2"
 python-constraint = "^1.4.0"
 pytest-xdist = "^3.6.1"
 freezegun = "^1.5.1"
+# Handy for monitoring parallel test runs (i.e., pytest-xdist) -- use htop to look for "pytest"
+setproctitle = "^1.3.5"
 
 
 [tool.pydocstyle]
