--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,16 +7,16 @@ authors = [{name = "Eric Hanchrow", email= "eric.hanchrow@gmail.com"}]
 requires-python = ">=3.10,<4.0"
 
 [tool.poetry.dependencies]
-django = "^5.1"
-django-debug-toolbar = "^4.4.6"
-django-extensions = "^3.2.3"
+django = "5.*"
+django-debug-toolbar = "4.*"
+django-extensions = "3.*"
 faker = "^26.0.0"
 more-itertools = "^10.3.0"
 tqdm = "^4.66.4"
 bridge = { git = "https://gitlab.com/offby1/bridge.git", rev = "055e73cf1d423a47933f3dd4e7027b8e7ba5f1ad" }
 #bridge = {path = "../library", develop = true}
-django-eventstream = "^5.3.0"
-daphne = "^4.1.2"
+django-eventstream = "5.*"
+daphne = "4.*"
 django-template-partials = "^24.4"
 whitenoise = {extras = ["brotli"], version = "^6.7.0"}
 retrying = "^1.3.4"
