--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ types-tabulate = "^0.9.0.20241207"
 pyinstrument = "^5.0.1"
 humanize = "^4.11.0"
 django-tz-detect = "^0.5.0"
+django-tables2 = "2.*"
 
 [tool.djlint]
 use_gitignore=true
