--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,26 +45,25 @@ requires-poetry = ">=2.0"
 package-mode = false
 
 [tool.poetry.group.dev.dependencies]
-ipython = "^8.26.0"
-django-coverage-plugin = "^3.1.0"
-django-types = "^0.19.1"
-mypy = "^1.11.2"
+ipython = "8.*"
+django-coverage-plugin = "3.*"
+django-types = "0.*"
+mypy = "1.*"
 types-tqdm = "^4.66.0.20240417"
 python-lsp-server = {extras = ["autopep8", "flake8", "mccabe", "pyflakes", "pylint", "rope", "websockets", "yapf"], version = "*"}
-logging-tree = "^1.10"
+logging-tree = "1.*"
 ruff = "*"
 ipdb = "^0.13.13"
-pytest-django = "^4.7.0"
-pytest-profiling = "^1.7.0"
-pylsp-mypy = "^0.6.9"
-python-lsp-black = "^2.0.0"
-pylsp-rope = "^0.1.17"
-python-lsp-ruff = "^2.2.2"
-python-constraint = "^1.4.0"
-pytest-xdist = "^3.6.1"
-freezegun = "^1.5.1"
+pytest-django = "4.*"
+pytest-profiling = "1.*"
+pylsp-mypy = "0.*"
+python-lsp-black = "2.*"
+pylsp-rope = "0.*"
+python-lsp-ruff = "2.*"
+pytest-xdist = "3.*"
+freezegun = "1.*"
 # Handy for monitoring parallel test runs (i.e., pytest-xdist) -- use htop to look for "pytest"
-setproctitle = "^1.3.5"
+setproctitle = "1.*"
 
 
 [tool.pydocstyle]
