--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,3 +96,4 @@ build-backend = "poetry.core.masonry.api"
 DJANGO_SETTINGS_MODULE="project.dev_settings"
 python_files = ["tests.py", "test_*.py", "*_test.py", "testing/python/*.py"]
 log_format = "%(asctime)s %(thread)d %(levelname)s %(filename)s %(lineno)d %(funcName)s %(message)s"
+log_date_format = "%Y-%m-%dT%H:%M:%S"
