--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,26 +8,27 @@ requires-python = ">=3.10,<4.0"
 
 [tool.poetry.dependencies]
 django = "5.*"
-django-debug-toolbar = "4.*"
-django-extensions = "3.*"
+django-debug-toolbar = "*"
+django-extensions = "*"
 faker = "^26.0.0"
 more-itertools = "^10.3.0"
-tqdm = "^4.66.4"
+tqdm = "*"
 bridge = { git = "https://gitlab.com/offby1/bridge.git", rev = "055e73cf1d423a47933f3dd4e7027b8e7ba5f1ad" }
 #bridge = {path = "../library", develop = true}
-django-eventstream = "5.*"
-daphne = "4.*"
-django-template-partials = "^24.4"
+django-eventstream = "*"
+daphne = "*"
+django-template-partials = "*"
 whitenoise = {extras = ["brotli"], version = "^6.7.0"}
 retrying = "^1.3.4"
-sseclient = "^0.0.27"
-types-requests = "^2.32.0.20240712"
-platformdirs = "^4.2.2"
-sentry-sdk = "2.*"
-docutils = "^0.21.2"
-django-fastdev = "^1.12.0"
+sseclient = "*"
+requests = "2.*"
+types-requests = "2.*"
+platformdirs = "*"
+sentry-sdk = "*"
+docutils = "*"
+django-fastdev = "*"
 # beware of https://github.com/psycopg/psycopg/issues/888
-psycopg = {extras = ["binary"], version = "^3.2.3"}
+psycopg = {extras = ["binary"], version = "*"}
 django-log-request-id = "^2.1.0"
 py-spy = "^0.4.0"
 types-tabulate = "^0.9.0.20241207"
