--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,6 +20,8 @@ services:
     depends_on:
       django-collected-static:
         condition: service_completed_successfully
+      django-migrated:
+        condition: service_completed_successfully
     environment:
       COMPOSE_PROFILES: ${COMPOSE_PROFILES:-}
       DJANGO_SECRET_FILE: /run/secrets/django_secret
